--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "2amigos/yii2-highcharts-widget": "~1.0",
         "kartik-v/yii2-widget-rating": "dev-master",
         "yii2mod/yii2-star-rating": "*",
-        "yiisoft/yii2-bootstrap4": "~2.0.6"
+        "yiisoft/yii2-bootstrap4": "~2.0.6",
+        "kartik-v/yii2-mpdf": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
