--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "kartik-v/yii2-widget-rating": "dev-master",
         "yii2mod/yii2-star-rating": "*",
         "yiisoft/yii2-bootstrap4": "~2.0.6",
-        "kartik-v/yii2-mpdf": "dev-master"
+        "kartik-v/yii2-mpdf": "dev-master",
+        "2amigos/yii2-date-picker-widget": "~1.0",
+        "kartik-v/yii2-widget-datepicker": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
